--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -131,13 +131,15 @@
           <div class="accordion-item border-top mb-0" *ngIf="!quotationAssoAffaireOrders[quotation.id]">
             <ul class="nav nav-tabs p-3" role="tablist" style="margin-bottom: 0;">
               <li class="nav-item ">
-                <a [attr.href]="'#myDocs'+service.id" class="nav-link active " data-bs-toggle="tab" role="tab">
+                <a [attr.href]="'#myDocs'+service.id" class="nav-link active " data-bs-toggle="tab" role="tab"
+                  *ngIf="displayMyDoc(service)">
                   <i class="fi-home me-2"></i>
                   Mes documents
                 </a>
               </li>
               <li class="nav-item" *ngIf=" service.assoServiceFieldTypes && service.assoServiceFieldTypes.length>0">
-                <a [attr.href]="'#myFields'+service.id" class="nav-link" data-bs-toggle="tab" role="tab">
+                <a [attr.href]="'#myFields'+service.id" class="nav-link" data-bs-toggle="tab" role="tab"
+                  *ngIf="displayMyInformation(service)">
                   <i class="fi-home me-2"></i>
                   Mes informations complémentaires
                 </a>
