--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-multiple-select.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-multiple-select.component.html
@@ -1,13 +1,15 @@
 <div class="full-width row" [formGroup]="form!">
-  <div class="select-wrapper">
-    <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length > 0"
-      class="form-label">{{label}}</label>
-    <select class="form-control" [formControlName]="propertyName" [id]="'fl-text'+uniqueId" [required]="isMandatory"
-      multiple [compareWith]="compareWithId" (blur)="blurForm()" [disabled]="isDisabled">
+  <div class="select-wrapper position-relative">
+    <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length > 0" class="form-label">{{ label
+      }}</label>
+
+    <select class="form-select custom-multiselect" [formControlName]="propertyName" [id]="'fl-text'+uniqueId"
+      [required]="isMandatory" multiple [compareWith]="compareWithId" (blur)="blurForm()" [disabled]="isDisabled">
       <option *ngFor="let type of types" [ngValue]="type">
         {{ displayLabel(type) }}
       </option>
     </select>
-    <i class="ai-chevron-down chevron"></i>
+
+    <i class="ai-chevron-down chevron position-absolute end-0 me-3 mt-2"></i>
   </div>
 </div>
