--- a/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
@@ -65,7 +65,7 @@
     </div>
     <div class="row ">
 
-      <div class="col">
+      <div class="col col-12 col-md-3">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
             <img src="assets/img/icons/prices_fixed.svg" alt="Icon">
@@ -77,7 +77,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="col col-12 col-md-3">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
             <img src="assets/img/icons/prestigious_image.svg" alt="Icon">
@@ -90,7 +90,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="col col-12 col-md-3">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
             <img src="assets/img/icons/expertise_reconnue.svg" alt="Icon">
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="col col-12 col-md-3">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
             <img src="assets/img/icons/fiscal_advantages.svg" alt="Icon">
