--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -98,10 +98,10 @@
                   Denomination
                 </strong>
                 <div class="col-10">
-                  <div *ngIf="this.quotation.assoAffaireOrders[indexAsso].affaire.isIndividual">
+                  <div *ngIf="!this.quotation.assoAffaireOrders[indexAsso].affaire.isIndividual">
                     {{this.quotation.assoAffaireOrders[indexAsso].affaire.denomination }}
                   </div>
-                  <div *ngIf="!this.quotation.assoAffaireOrders[indexAsso].affaire.isIndividual">
+                  <div *ngIf="this.quotation.assoAffaireOrders[indexAsso].affaire.isIndividual">
                     {{this.quotation.assoAffaireOrders[indexAsso].affaire.firstname }}
                     {{this.quotation.assoAffaireOrders[indexAsso].affaire.lastname}}
                   </div>
@@ -154,7 +154,7 @@
           </div>
 
           <!-- Si type = entreprise -->
-          <div class="mb-3" *ngIf="affaireTypes[indexAsso].id == notIndividual.id">
+          <div class="mb-3" *ngIf="affaireTypes[indexAsso] && affaireTypes[indexAsso].id == notIndividual.id">
             <generic-input [(model)]="quotation.assoAffaireOrders[indexAsso].affaire.denomination" label="Dénomination"
               [form]="idenficationForm" [propertyName]="'denomination'+indexAsso" [isMandatory]="true"
               [isDisabled]="false" [maxLength]="150">
@@ -162,7 +162,7 @@
           </div>
 
           <!-- Si type = particulier -->
-          <div class="row mb-3" *ngIf="affaireTypes[indexAsso].id == individual.id">
+          <div class="row mb-3" *ngIf="affaireTypes[indexAsso] && affaireTypes[indexAsso].id == individual.id">
             <div class="col-md-6">
               <generic-input [(model)]="quotation.assoAffaireOrders[indexAsso].affaire.firstname" label="Prénom"
                 [form]="idenficationForm" [propertyName]="'firstname'+indexAsso" [isMandatory]="true"
