--- a/client/src/app/modules/quotation/components/service-side-panel-details/service-side-panel-details.component.html
+++ b/client/src/app/modules/quotation/components/service-side-panel-details/service-side-panel-details.component.html
@@ -56,44 +56,62 @@
       </mat-menu>
     </mat-panel-description>
   </mat-expansion-panel-header>
-  <attachments [entity]="serviceAttachments" [editMode]="false" [forIntegration]="true">
-  </attachments>
-  <table class="full-width" *ngIf="service">
-    <ng-container *ngFor="let assoServiceFieldType of service.assoServiceFieldTypes; let i = index">
-      <tr>
-        <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_TEXT">
-          <generic-input [(model)]="assoServiceFieldType.stringValue"
-            [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
-            [propertyName]='"stringFieldType"+i' [isDisabled]="true" [isMandatory]="assoServiceFieldType.isMandatory"
-            [maxLength]="255"></generic-input>
-        </td>
-        <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_TEXTAREA">
-          <generic-textarea [(model)]="assoServiceFieldType.textAreaValue"
-            [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
-            [propertyName]='"textAreaFieldType"+i' [isDisabled]="true"
-            [isMandatory]="assoServiceFieldType.isMandatory"></generic-textarea>
-        </td>
-        <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_DATE">
-          <generic-datepicker [(model)]="assoServiceFieldType.dateValue"
-            [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
-            [propertyName]='"dateFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
-            [isDisabled]="true"></generic-datepicker>
-        </td>
-        <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_INTEGER">
-          <generic-input [(model)]="assoServiceFieldType.integerValue"
-            [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
-            [propertyName]='"integerFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory" [isDisabled]=" true"
-            type="number"></generic-input>
-        </td>
-        <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_SELECT">
-          <select-value-service-field-type [(model)]="assoServiceFieldType.selectValue"
-            [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
-            [propertyName]='"selectFieldType"+i' [serviceFieldType]="assoServiceFieldType.serviceFieldType"
-            [isMandatory]="assoServiceFieldType.isMandatory" [isDisabled]="true"></select-value-service-field-type>
-        </td>
-      </tr>
-    </ng-container>
-  </table>
+  <mat-accordion class="custom-panel">
+    <mat-expansion-panel expanded="false"
+      *ngIf="serviceAttachments && serviceAttachments.attachments && serviceAttachments.attachments.length>0">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Pièces
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <attachments [entity]="serviceAttachments" [editMode]="false" [forIntegration]="true">
+      </attachments>
+    </mat-expansion-panel>
+    <mat-expansion-panel expanded="false"
+      *ngIf=" service.assoServiceFieldTypes &&  service.assoServiceFieldTypes.length>0">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Informations complémentaires
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <table class="full-width" *ngIf="service">
+        <ng-container *ngFor="let assoServiceFieldType of service.assoServiceFieldTypes; let i = index">
+          <tr>
+            <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_TEXT">
+              <generic-input [(model)]="assoServiceFieldType.stringValue"
+                [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
+                [propertyName]='"stringFieldType"+i' [isDisabled]="true"
+                [isMandatory]="assoServiceFieldType.isMandatory" [maxLength]="255"></generic-input>
+            </td>
+            <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_TEXTAREA">
+              <generic-textarea [(model)]="assoServiceFieldType.textAreaValue"
+                [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
+                [propertyName]='"textAreaFieldType"+i' [isDisabled]="true"
+                [isMandatory]="assoServiceFieldType.isMandatory"></generic-textarea>
+            </td>
+            <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_DATE">
+              <generic-datepicker [(model)]="assoServiceFieldType.dateValue"
+                [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
+                [propertyName]='"dateFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
+                [isDisabled]="true"></generic-datepicker>
+            </td>
+            <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_INTEGER">
+              <generic-input [(model)]="assoServiceFieldType.integerValue"
+                [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
+                [propertyName]='"integerFieldType"+i' [isMandatory]="assoServiceFieldType.isMandatory"
+                [isDisabled]=" true" type="number"></generic-input>
+            </td>
+            <td *ngIf="assoServiceFieldType.serviceFieldType.dataType==SERVICE_FIELD_TYPE_SELECT">
+              <select-value-service-field-type [(model)]="assoServiceFieldType.selectValue"
+                [label]="assoServiceFieldType.serviceFieldType.label" [form]="serviceForm"
+                [propertyName]='"selectFieldType"+i' [serviceFieldType]="assoServiceFieldType.serviceFieldType"
+                [isMandatory]="assoServiceFieldType.isMandatory" [isDisabled]="true"></select-value-service-field-type>
+            </td>
+          </tr>
+        </ng-container>
+      </table>
+    </mat-expansion-panel>
+  </mat-accordion>
   <div class="custom-panel" style="margin-bottom: 15px;" *ngIf="service">
     <div class="field-row" *ngIf="service.servicePrice">
       <div class="label">Montant du service</div>
