--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -411,48 +411,43 @@
           <!-------------- Adresse de conservation des documents comptables ---------------->
           <div class="quotation-container">
             <h6><i class="ai-briefcase me-2"></i>Adresse de conservation des documents comptables</h6>
-            <div class="row form-switch justify-content-start p-0 pt-md-2 g-3"
-              *ngIf="mustDecribeAdresse(provision.domiciliation)">
+            <div class="row form-switch justify-content-start p-0 pt-md-2 g-3">
               <div class="col">
-                <generic-textarea [(model)]="provision.domiciliation.activityDescription" label="Activité de la société"
-                  [form]="informationForm" propertyName="activityDescription" [isMandatory]="false"
-                  [isDisabled]="false">
-                </generic-textarea>
+                <generic-input [(model)]="provision.domiciliation.accountingDocumentsConservationAddress"
+                  label="Adresse" [form]="informationForm" propertyName="accountingDocumentsConservationAddress"
+                  [isMandatory]="false" [isDisabled]="false" [maxLength]="60">
+                </generic-input>
               </div>
             </div>
             <div class="row form-switch justify-content-start p-0 pt-md-2 g-3">
               <div class="col">
-                <generic-input [(model)]="provision.domiciliation.activityAddress" label="Adresse"
-                  [form]="informationForm" propertyName="activityAddress" [isMandatory]="false" [isDisabled]="false"
-                  [maxLength]="60">
+                <generic-input [(model)]="provision.domiciliation.accountingDocumentsConservationCedexComplement"
+                  label="Complément d'adresse (facultatif)" [form]="informationForm"
+                  propertyName="accountingDocumentsConservationCedexComplement" [isMandatory]="false"
+                  [isDisabled]="false" [maxLength]="60">
                 </generic-input>
               </div>
             </div>
             <div class="row form-switch justify-content-start p-0 pt-md-2 g-3">
               <div class="col-md-2">
-                <generic-input [(model)]="provision.domiciliation.activityPostalCode" label="Code postal"
-                  [form]="informationForm" propertyName="domActivityPostalCode" [isMandatory]="false"
-                  (onFormBlur)="findCityForActivityDomiciliation(provision.domiciliation)" [isDisabled]="false"
-                  [maxLength]="10">
+                <generic-input [(model)]="provision.domiciliation.accountingDocumentsConservationPostalCode"
+                  label="Code postal" [form]="informationForm" propertyName="accountingDocumentsConservationPostalCode"
+                  [isMandatory]="false" (onFormBlur)="findCityForAccountingDomiciliation(provision.domiciliation)"
+                  [isDisabled]="false" [maxLength]="10">
                 </generic-input>
               </div>
               <div class="col-md-5">
-                <autocomplete-city [(model)]="provision.domiciliation.activityCity" [form]="informationForm"
-                  [modelCountry]="provision.domiciliation.activityCountry" [isMandatory]="false" label="Ville"
-                  propertyName="domActivityAutocompleteCity"></autocomplete-city>
+                <autocomplete-city [(model)]="provision.domiciliation.accountingDocumentsConservationCity"
+                  [form]="informationForm"
+                  [modelCountry]="provision.domiciliation.accountingDocumentsConservationCountry" [isMandatory]="false"
+                  label="Ville" propertyName="accountingDocumentsConservationCity"></autocomplete-city>
               </div>
               <div class="col-md-5">
-                <select-country class="col-md-5" [(model)]="provision.domiciliation.activityCountry" label="Pays"
-                  [form]="informationForm" propertyName="domActivityCountry" [isMandatory]="false" [isDisabled]="false">
+                <select-country class="col-md-5"
+                  [(model)]="provision.domiciliation.accountingDocumentsConservationCountry" label="Pays"
+                  [form]="informationForm" propertyName="accountingDocumentsConservationCountry" [isMandatory]="false"
+                  [isDisabled]="false">
                 </select-country>
-              </div>
-            </div>
-            <div class="row form-switch justify-content-start p-0 pt-md-2 g-3">
-              <div class="col">
-                <generic-textarea [(model)]="provision.domiciliation.activityDescription"
-                  label="Rédiger toute les informations liées à votre activité" [form]="informationForm"
-                  propertyName="activityDescription" [isMandatory]="false" [isDisabled]="false">
-                </generic-textarea>
               </div>
             </div>
           </div>
