--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -27,8 +27,8 @@
                 <article *ngFor="let post of lastPosts | slice:1:3" class="blog-style4">
                   <div class="card border-0">
                     <div class="blog-post-image image-hover-style-1">
-                      <a (click)="openPost(post, $event)"> <img class="lazyload"
-                          [src]="post.media.urlMediumLarge!=null ? post.media.urlMediumLarge : post.media.urlFull"
+                      <a (click)="openPost(post, $event)"> <img class="lazyload" *ngIf="post && post.media"
+                          [src]="post.media.urlMediumLarge!=null ? post.media.urlMediumLarge : post.media.urlFull!=null ? post.media.urlFull : '' "
                           [alt]="post.media.alt_text" class="w-100"></a>
                     </div>
                     <div class="card-body px-0">
